[project]
name = "hypergrid"
version = "0.1.0"
description = ""
authors = [
    {name = "bhosley",email = "brandonscotthosley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minigrid (>=3.0.0,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "aenum (>=3.1.16,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "numpy (>=2.2,<2.3)",
    "black (>=25.1.0,<26.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hypergrid", from = "."}]

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
