[project]
name = "hypergrid"
version = "0.1.0"
description = ""
authors = [
    {name = "bhosley",email = "brandonscotthosley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minigrid (>=3.0.0,<4.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "aenum (>=3.1.16,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "numpy (>=2.2,<2.3)",
    "pytest (>=8.4.1,<9.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hypergrid", from = "."}]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
ruff = "^0.12.5"

[tool.poetry.group.rl_scripts]
optional = true

[tool.poetry.group.rl_scripts.dependencies]
ray = {extras = ["tune"], version = "^2.48.0"}
torch = "^2.7.1"
scikit-learn = "^1.7.1"
dm-tree = "^0.1.9"
pillow = "^11.3.0"
lz4 = "^4.4.4"
python-dotenv = "^1.1.1"

[tool.ruff]
line-length = 80
lint.ignore = ["E402"] # Module level import not at top of file

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
